# stockanalysis

./: README.md  env.example  index.js  package.json  portfolio.json  pyproject.toml
src/stockanalysis/: agent.py  cli.py  model.py  portfolio.py  prompts.py  providers.py
src/stockanalysis/analyzers/: __init__.py  ticker_analyzer.py
src/stockanalysis/utils/: intro.py  logger.py
